# smart-inventory-system

backend/: CMakeLists.txt  main.cpp  schema.sql
backend/controllers/: InventoryController.cpp  ProductsController.cpp
backend/data/: inventory.db
backend/db/: Database.cpp
backend/include/controllers/: InventoryController.h  ProductsController.h
backend/include/db/: Database.h
backend/include/middleware/: CorsMiddleware.h
backend/include/models/: InventoryModel.h  ProductModel.h
backend/include/routes/: inventory_routes.h  products_routes.h
backend/models/: InventoryModel.cpp  ProductModel.cpp
backend/routes/: inventory_routes.cpp  products_routes.cpp
backend/uploads/: imported_products.csv
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/inventory/: page.tsx
frontend/app/products/: page.tsx
frontend/components/: connection-status.tsx  navigation.tsx
frontend/hooks/: useInventory.ts  useProducts.ts
frontend/lib/: api.ts
